--- a/index.html
+++ b/index.html
@@ -16,8 +16,12 @@
 	<body>
 		<div class="reveal">
 			<div class="slides">
-				<section>Slide 1</section>
-				<section>Slide 2</section>
+				<section>GIT FLOW</section>
+				<section>
+					<section>Vertical Slide 1</section>
+					<section>Vertical Slide 2</section>
+				</section>
+				<section>O que é?</section>
 			</div>
 		</div>
 
