--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 		<link rel="stylesheet" href="dist/reset.css">
 		<link rel="stylesheet" href="dist/reveal.css">
 		<link rel="stylesheet" href="dist/theme/black.css" id="theme">
+<!--		<link rel="stylesheet" href="dist/theme/night.css" id="theme">-->
+<!--		<link rel="stylesheet" href="dist/theme/blood.css" id="theme">-->
+<!--		<link rel="stylesheet" href="dist/theme/moon.css" id="theme">-->
 
 		<!-- Theme used for syntax highlighted code -->
 		<link rel="stylesheet" href="plugin/highlight/monokai.css" id="highlight-theme">
@@ -16,12 +19,42 @@
 	<body>
 		<div class="reveal">
 			<div class="slides">
-				<section>GIT FLOW</section>
 				<section>
-					<section>Vertical Slide 1</section>
-					<section>Vertical Slide 2</section>
+					<h2 class="r-fit-text">&nbsp;GIT FLOW&nbsp;</h2>
 				</section>
-				<section>O que é?</section>
+				<section>
+					<section>O que é Git Flow?</section>
+					<section data-markdown>
+						<textarea data-template>
+						Como funciona?
+						</textarea>
+					</section>
+					<section data-markdown>
+						<textarea data-template>
+						Branches principais:
+						* master
+						* develop
+
+						Branches de suporte:
+						* features/*
+						* hotfix/*
+						* release/*
+						</textarea>
+					</section>
+				</section>
+
+				<section>
+					<img width="400px" data-src="https://nvie.com/img/git-model@2x.png">
+				</section>
+
+				<section data-markdown>
+					<textarea data-template>
+					Referências:
+					* <a href="https://nvie.com/posts/a-successful-git-branching-model/">A Successful Git Branching Model</a>
+					* <a href="https://danielkummer.github.io/git-flow-cheatsheet/">Git Flow Cheatsheet</a>
+					* <a href="https://guides.github.com/introduction/flow/">GitHub Flow</a>
+					</textarea>
+				</section>
 			</div>
 		</div>
 
