--- a/index.html
+++ b/index.html
@@ -22,28 +22,32 @@
 				<section>
 					<h2 class="r-fit-text">&nbsp;GIT FLOW&nbsp;</h2>
 				</section>
-				<section>
-					<section>O que é Git Flow?</section>
-					<section data-markdown>
-						<textarea data-template>
-						Como funciona?
-						</textarea>
-					</section>
-					<section data-markdown>
-						<textarea data-template>
-						Branches principais:
-						* master
-						* develop
 
-						Branches de suporte:
-						* features/*
-						* hotfix/*
-						* release/*
-						</textarea>
-					</section>
+				<section>
+					<h4>O que é Git Flow?</h4>
 				</section>
 
 				<section>
+					<h4>Como funciona?</h4>
+				</section>
+
+				<section class="fragment">
+					<p>Branches principais</p>
+					<ul>
+						<li class="fragment fade-in">master</li>
+						<li class="fragment fade-in">develop</li>
+					</ul>
+
+					<p>Branches de suporte</p>
+					<ul>
+						<li class="fragment fade-in">features/*</li>
+						<li class="fragment fade-in">hotfix/*</li>
+						<li class="fragment fade-in">release/*</li>
+					</ul>
+				</section>
+
+				<section>
+					<p>Fluxo de Trabalho</p>
 					<img width="400px" data-src="https://nvie.com/img/git-model@2x.png">
 				</section>
 
